# storage/api-docs/api-docs.json
@@ -49,6 +49,101 @@
                 }
             }
         },
+        "/api/v1/files/list": {
+            "get": {
+                "security": [{ "api_key": [] }],
+                "tags": [ "Файловая система" ],
+                "summary": "Список загруженных файлов",
+                "parameters": [
+                    { "name": "name", "in": "query", "required": false, "description": "Поиск по названию файла" },
+                    { "name": "place", "in": "query", "required": false, "description": "Тип загрузки", "schema": { "enum": [ "images", "document" ] } }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "example": {
+                                    "items": [
+                                        {
+                                            "id": 0,
+                                            "src": "string",
+                                            "place": "string"
+                                        }
+                                    ],
+                                    "meta": {
+                                        "size": 0,
+                                        "lastpage": 0,
+                                        "perpage": 0,
+                                        "page": 0
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/files/upload/images": {
+            "post": {
+                "security": [{ "api_key": [] }],
+                "tags": [ "Файловая система" ],
+                "summary": "Загрузка изображений",
+                "requestBody": {
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "file_1": { "type": "string", "format": "binary" },
+                                    "file_2": { "type": "string", "format": "binary" }
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "example": { "message": "ok" }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/files/upload/documents": {
+            "post": {
+                "security": [{ "api_key": [] }],
+                "tags": [ "Файловая система" ],
+                "summary": "Загрузка документов",
+                "requestBody": {
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "file_1": { "type": "string", "format": "binary" },
+                                    "file_2": { "type": "string", "format": "binary" }
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "example": { "message": "ok" }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/post": {
             "get": {
                 "tags": ["Статьи"],
@@ -117,8 +212,10 @@
                                 "properties": {
                                     "title_ru": { "type": "string" },
                                     "title_kk": { "type": "string" },
+                                    "title_en": { "type": "string" },
                                     "content_ru": { "type": "string" },
                                     "content_kk": { "type": "string" },
+                                    "content_en": { "type": "string" },
                                     "tags": { "type": "array", "items": { "type": "string" } },
                                     "photo": { "type": "string", "format": "binary" }
                                 }
@@ -197,8 +294,10 @@
                                 "properties": {
                                     "title_ru": { "type": "string" },
                                     "title_kk": { "type": "string" },
+                                    "title_en": { "type": "string" },
                                     "content_ru": { "type": "string" },
                                     "content_kk": { "type": "string" },
+                                    "content_en": { "type": "string" },
                                     "tags": { "type": "array", "items": { "type": "string" } },
                                     "photo": { "type": "string", "format": "binary" }
                                 }
@@ -366,6 +465,7 @@
                                     "group_id": { "type": "number" },
                                     "title_ru": { "type": "string" },
                                     "title_kk": { "type": "string" },
+                                    "title_en": { "type": "string" },
                                     "price": { "type": "number" },
                                     "tags": { "type": "array", "items": { "type": "string" } },
                                     "discount": { "type": "number" },
@@ -406,6 +506,7 @@
                                     "group_id": { "type": "number" },
                                     "title_ru": { "type": "string" },
                                     "title_kk": { "type": "string" },
+                                    "title_en": { "type": "string" },
                                     "price": { "type": "number" },
                                     "tags": { "type": "array", "items": { "type": "string" } },
                                     "discount": { "type": "number" },
@@ -482,6 +583,7 @@
                                 "properties": {
                                     "title_ru": { "type": "string" },
                                     "title_kk": { "type": "string" },
+                                    "title_en": { "type": "string" },
                                     "prices": {
                                         "type": "array",
                                         "items": {
@@ -489,6 +591,7 @@
                                             "properties": {
                                                 "title_ru": { "type": "string" },
                                                 "title_kk": { "type": "string" },
+                                                "title_en": { "type": "string" },
                                                 "price": { "type": "number" },
                                                 "tags": { "type": "array", "items": { "type": "string" } },
                                                 "discount": { "type": "number" },
@@ -537,6 +640,7 @@
                                             "id": 0,
                                             "title_ru": "",
                                             "title_kk": "",
+                                            "title_en": { "type": "string" },
                                             "order_index": 0,
                                             "delete": 0,
                                             "childs": {
@@ -603,6 +707,7 @@
                                 "properties": {
                                     "title_ru": { "type": "string" },
                                     "title_kk": { "type": "string" },
+                                    "title_en": { "type": "string" },
                                     "order_index": { "type": "number" }
                                 }
                             }
